benswork/UARProject/force-app/main/default/objects/Access_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Access Requests</relationshipLabel>
    <relationshipName>Access_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>