benswork/UARProject/force-app/main/default/objects/Access_Request__c/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App</label>
    <referenceTo>Apps__c</referenceTo>
    <relationshipLabel>Access Requests</relationshipLabel>
    <relationshipName>Access_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>