benswork/UARProject/force-app/main/default/objects/Access_Request__c/fields/App_Business_Owner_User__c.field-meta.xml
<CustomField>
    <fullName>App_Business_Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App Business Owner (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Access_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>