benswork/UARProject/force-app/main/default/objects/Access_Request__c/fields/App_User__c.field-meta.xml
<CustomField>
    <fullName>App_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App User</label>
    <referenceTo>App_User__c</referenceTo>
    <relationshipLabel>Access Requests</relationshipLabel>
    <relationshipName>Access_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>