benswork/UARProject/force-app/main/default/objects/Access_Request__c/fields/Approval_Required_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required_Rollup__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approval Required Rollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>