benswork/UARProject/force-app/main/default/objects/Access_Request__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Please include any comments/exceptions to the request that could not be captured in the fields above.</description>
    <inlineHelpText>Please include any comments/exceptions to the request that could not be captured in the fields above.</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>