benswork/UARProject/force-app/main/default/objects/Access_Request__c/fields/Community_Record_Detail_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_Record_Detail_URL__c</fullName>
    <formula>&#39;/s/detail/&#39;+ Id</formula>
    <label>Community Record Detail URL</label>
    <type>Text</type>
</CustomField>