benswork/UARProject/force-app/main/default/objects/Access_Request__c/fields/Display_App_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_App_Name__c</fullName>
    <formula>App__r.Name</formula>
    <label>Display App Name</label>
    <type>Text</type>
</CustomField>