benswork/UARProject/force-app/main/default/objects/Access_Request__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Persona</label>
    <referenceTo>App_Role__c</referenceTo>
    <relationshipLabel>Access Requests</relationshipLabel>
    <relationshipName>Access_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>