benswork/UARProject/force-app/main/default/objects/Access_Request__c/fields/Request_Owner__c.field-meta.xml
<CustomField>
    <fullName>Request_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Access Requests (Request Owner)</relationshipLabel>
    <relationshipName>Access_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>