benswork/UARProject/force-app/main/default/objects/Access_Request__c/fields/Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>Requester_Email__c</fullName>
    <description>Email address of the Requester</description>
    <label>Requester Email</label>
    <type>Email</type>
</CustomField>