benswork/UARProject/force-app/main/default/objects/Access_Request__c/fields/Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Name__c</fullName>
    <formula>Request_Owner__r.FirstName + &#39; &#39; + Request_Owner__r.LastName</formula>
    <label>Requester Name</label>
    <type>Text</type>
</CustomField>