benswork/UARProject/force-app/main/default/objects/Access_Request__c/fields/Requester_User__c.field-meta.xml
<CustomField>
    <fullName>Requester_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Access_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>