benswork/UARProject/force-app/main/default/objects/Access_Request__c/validationRules/App_Name_Filled.validationRule-meta.xml
<ValidationRule>
    <fullName>App_Name_Filled</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(App__c)</errorConditionFormula>
    <errorDisplayField>App__c</errorDisplayField>
    <errorMessage>App Name required</errorMessage>
</ValidationRule>