benswork/UARProject/force-app/main/default/objects/Access_Request__c/validationRules/Limit_Status_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Status_Selection</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.Org_Settings__c.Bypass_Validation_Rules__c = FALSE 
&amp;&amp; 
( 
AND( 
ISPICKVAL(PRIORVALUE (Status__c), &quot;Pending&quot;), 
OR( 
ISPICKVAL(Status__c, &quot;Approved by Business Owner&quot;), 
ISPICKVAL(Status__c, &quot;Approved&quot;),
ISPICKVAL(Status__c, &quot;Complete&quot;)) 
) 
) 
|| 
( 
AND( 
ISPICKVAL(PRIORVALUE (Status__c), &quot;Approved by Supervisor&quot;), 
OR( 
ISPICKVAL(Status__c, &quot;Approved&quot;),
ISPICKVAL(Status__c, &quot;Complete&quot;)),
(Approval_Required_Rollup__c &gt; 0) 
) 
)
|| 
( 
AND( 
ISPICKVAL(PRIORVALUE (Status__c), &quot;Rejected&quot;), 
OR(
ISPICKVAL(Status__c, &quot;Pending&quot;),
ISPICKVAL(Status__c, &quot;Approved by Supervisor&quot;),
ISPICKVAL(Status__c, &quot;Approved by Business Owner&quot;), 
ISPICKVAL(Status__c, &quot;Approved&quot;),
ISPICKVAL(Status__c, &quot;Complete&quot;)) 
) 
)
|| 
( 
AND( 
ISPICKVAL(PRIORVALUE (Status__c), &quot;Approved&quot;), 
OR(
ISPICKVAL(Status__c, &quot;Pending&quot;),
ISPICKVAL(Status__c, &quot;Approved by Supervisor&quot;),
ISPICKVAL(Status__c, &quot;Approved by Business Owner&quot;), 
ISPICKVAL(Status__c, &quot;Rejected&quot;)) 
) 
)</errorConditionFormula>
    <errorMessage>You cannot update the status to this value.</errorMessage>
</ValidationRule>