benswork/UARProject/force-app/main/default/objects/Access_Request__c/validationRules/Owner_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(  Requester_User__c  )</errorConditionFormula>
    <errorDisplayField>Requester_User__c</errorDisplayField>
    <errorMessage>Owner cannot be blank</errorMessage>
</ValidationRule>