benswork/UARProject/force-app/main/default/objects/Access_Request__c/validationRules/Supervisor_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Supervisor_is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK (Account__c)</errorConditionFormula>
    <errorMessage>Must complete Supervisor field.</errorMessage>
</ValidationRule>