benswork/UARProject/force-app/main/default/objects/Access_Request__c/listViews/CBP_Correspondence_Support_Queue_Access_Request.listView-meta.xml
<ListView>
    <fullName>CBP_Correspondence_Support_Queue_Access_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>CBP Correspondence Support Queue</label>
    <queue>CBP_Correspondence_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>