benswork/UARProject/force-app/main/default/objects/Access_Request__c/listViews/CBP_Launchpad_Case_Queue_Access_Request.listView-meta.xml
<ListView>
    <fullName>CBP_Launchpad_Case_Queue_Access_Request</fullName>
    <columns>NAME</columns>
    <columns>App__c</columns>
    <columns>Request_Owner__c</columns>
    <columns>Status__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>CBP Launchpad Queue - UARs</label>
    <queue>CBP_Launchpad_Case_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>