benswork/UARProject/force-app/main/default/objects/Access_Request__c/listViews/HRM_Recruiting_Support_Queue_Access_Request.listView-meta.xml
<ListView>
    <fullName>HRM_Recruiting_Support_Queue_Access_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>HRM Recruiting Support Queue</label>
    <queue>HRM_Recruiting_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>