benswork/UARProject/force-app/main/default/objects/Access_Request__c/listViews/ITAR_Support_Queue_Access_Request.listView-meta.xml
<ListView>
    <fullName>ITAR_Support_Queue_Access_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>ITAR Support Queue</label>
    <queue>ITAR_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>