benswork/UARProject/force-app/main/default/objects/Access_Request__c/listViews/OT_T_Support_Queue_Access_Request.listView-meta.xml
<ListView>
    <fullName>OT_T_Support_Queue_Access_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>OT&amp;T Support Queue</label>
    <queue>OT_T_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>