benswork/UARProject/force-app/main/default/objects/Access_Request__c/listViews/TDY_Support_Queue_Access_Request.listView-meta.xml
<ListView>
    <fullName>TDY_Support_Queue_Access_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>TDY Support Queue</label>
    <queue>TDY_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>